* 2014-09-09 - tobias.friedrich@open-xchange.com

 - Fix for bug 34325: Don't try to query distributed map statistics if no owners for all configured partition replicas detected

* 2014-09-09 - ioannis.chouklis@open-xchange.com

 - Fix for bug 34322: Consider the 'OK' keyword in Sieve comments
 
* 2014-09-08 - thorben.betten@open-xchange.com

 - Fix for bug 33036: Introduced convenience methods to optionally resolve a setting and to ignore any load/save-back operations if such a setting is non-existent

* 2014-09-05 - marc.arens@open-xchange.com

 - Fix for bug 34196: Deny access to documentconverterws by default

* 2014-09-05 - thorben.betten@open-xchange.com

 - Fix for bug 32634: Distribute received push event remotely to other cluster nodes

* 2014-09-04 - jan.bauerdick@open-xchange.com

 - Fix for bug 34249: Use EventFiringInfostoreFacade instead of InfostoreFacade, events will trigger deletion of preview images

* 2014-09-03 - jan.bauerdick@open-xchange.com

 - Fix for bug 33935: Print database name if id is unset

* 2014-09-02 - tobias.friedrich@open-xchange.com

 - Fix for bug 34248: Batch-invalidate all contexts in a schema during blocking update tasks

* 2014-09-02 - jan.bauerdick@open-xchange.com

 - Fix for bug 34249: Delete empty folders from file system

* 2014-09-02 - marcus.klein@open-xchange.com

 - Fix for bug 31612: Using a new connection to config database to determine if a just created schema needs to be deleted again on context
                      creation failure.
 - Fix for bug 33401: Do not use representative context identifier for listing filestores with usage anymore because context could have been
                      deleted in the meantime. Try all context identifier of the given filestore context block.

* 2014-09-02 - thorben.betten@open-xchange.com

 - Fix for bug 33956: Perform safe flush on socket output stream to not prevent reading returned SMTP return code if SMPT server closes